--- a/index.html
+++ b/index.html
@@ -432,10 +432,10 @@
             id="video-ganador"
             class="absolute plyr block mx-auto bg-transparent object-cover w-full h-full left-0 right-0 top-0 bottom-0"
             controls
-            poster="src/assets/img/thumbnail.png"
+            poster="./src/assets/img/thumbnail.png"
           >
             <source
-              src="src/assets/video/video-prueba.mp4"
+              src="./src/assets/video/video-prueba.mp4"
               type="video/mp4"
             />
           </video>
@@ -610,6 +610,6 @@
     <script src="https://cdn.plyr.io/3.6.8/plyr.polyfilled.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.2.2/dist/cdn.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
-    <script  src="/src/main.js"></script>
+    <script  src="./src/main.js"></script>
   </body>
 </html>
