Se construyo el proyecto

--- a/index.html
+++ b/index.html
@@ -610,6 +610,6 @@
     <script src="https://cdn.plyr.io/3.6.8/plyr.polyfilled.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.2.2/dist/cdn.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
-    <script  src="./src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
