--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body class="overflow-x-hidden relative">
 
-    <div id="modal-premio" class="fixed inset-0 left-0 right-0 top-0 bottom-0 bg-[#202020B5] z-30  transition-all duration-300 opacity-0 invisible">
-      <div class="confeti-modal absolute container max-w-[400px] bg-white shadow-banbif-shadow left-1/2 -translate-x-1/2 top-60 z-10 text-center py-12 rounded-banbif-radius-sm overflow-hidden opacity-100 px-8">
+    <div id="modal-premio" class="fixed w-full inset-0 left-0 right-0 top-0 bottom-0 bg-[#202020B5] z-30  transition-all duration-300 overflow-hidden ">
+      <div class="confeti-modal absolute container max-w-[90%] sm:max-w-[400px] bg-white shadow-banbif-shadow left-1/2 -translate-x-1/2 top-60 z-10 text-center py-12 rounded-banbif-radius-sm overflow-hidden opacity-100 px-4">
         
         <canvas id="confettiCanvas" class="absolute left-0 right-0 w-full h-full top-0 rounded-banbif-radius-lg  pointer-events-none">   
            
@@ -71,7 +71,7 @@
           id="ruleta" 
           xmlns="http://www.w3.org/2000/svg" 
           viewBox="0 0 1080 1080"
-          class="max-w-[380px] md:max-w-[600px] block md:ml-auto md:mr-0 w-full mx-auto transition-transform duration-[10000ms] ease-[cubic-bezier(0.68, -0.75, 0.32, 1.5)]"
+          class="max-w-[380px] md:max-w-[600px] block md:ml-auto md:mr-0 w-full mx-auto transition-transform duration-[10000ms] ease-[cubic-bezier(0.68, -0.75, 0.32, 1.5)] overflow-hidden"
           >
           <defs>
             <style>
