Se oculto el modal al inicio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class="overflow-x-hidden relative">
 
-    <div id="modal-premio" class="fixed w-full inset-0 left-0 right-0 top-0 bottom-0 bg-[#202020B5] z-30  transition-all duration-300 overflow-hidden ">
+    <div id="modal-premio" class="fixed w-full inset-0 left-0 right-0 top-0 bottom-0 bg-[#202020B5] z-30  transition-all duration-300 overflow-hidden opacity-0 invisible">
       <div class="confeti-modal absolute container max-w-[90%] sm:max-w-[400px] bg-white shadow-banbif-shadow left-1/2 -translate-x-1/2 top-60 z-10 text-center py-12 rounded-banbif-radius-sm overflow-hidden opacity-100 px-4">
         
         <canvas id="confettiCanvas" class="absolute left-0 right-0 w-full h-full top-0 rounded-banbif-radius-lg  pointer-events-none">   
