Se soluciono inconveniente en iphone 12

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
 
     <!-- Seccion Ruleta -->
-    <section class="container mb-24">
+    <section class="container mb-24 overflow-hidden">
       <div
         class="grid grid-cols-1 md:grid-cols-10 lg:grid-cols-12 md:gap-10 items-center"
       >
