Se corrigio tamaño de texto

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 
     <!-- Section Participar -->
     <section class="container mb-24">
-      <h3 class="text-banbif-text text-3xl text-center font-semibold mb-8">
+      <h3 class="text-banbif-text text-2xl md:text-3xl text-center font-semibold mb-8">
         ¿Cómo puedo participar de la Ruleta Genial?
       </h3>
       <div
