Se actualizo links donde faltaban

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
           <p>Abre una Cuenta Sueldo Genial y recibe tu abono de haberes.</p>
           <a
             class="bg-banbif-button-gradient text-white py-3 px-12 rounded-banbif-radius-lg inline-flex"
-            href="#"
+            href="https://www.banbif.com.pe/AperturaCuentaHaberesCTS" target="_blank"
             >Abrir aquí</a
           >
         </div>
@@ -407,7 +407,7 @@
           <p>Abre una Cuenta Ahorro Genial con S/900 o US300.</p>
           <a
             class="bg-banbif-button-gradient text-white py-3 px-12 rounded-banbif-radius-lg inline-flex"
-            href="#"
+            href="https://www.banbif.com.pe/AperturaCuenta" target="_blank"
             >Abrir aquí</a
           >
         </div>
@@ -559,7 +559,7 @@
 
       <div class="w-full h-[1px] bg-gray-200"></div>
 
-      <a class="underline block py-4 text-banbif-cyan" target="_blank" href="#"
+      <a class="underline block py-4 text-banbif-cyan" target="_blank" href="https://www.banbif.com.pe/Portals/0/PDF/Sorteos/terminos-y-condiciones-ruleta-genial-banbif.pdf"
         >Términos y condiciones de la Campaña Ruleta Genial</a
       >
     </section>
